manifests/k8s/base/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shareschool
spec:
  selector:
    app: shareschool
  ports:
    - port: 80
      targetPort: 3000
